--- a/src/main/java/logic/Presentacion/RegistrarUsuarioCU.form
+++ b/src/main/java/logic/Presentacion/RegistrarUsuarioCU.form
@@ -59,39 +59,39 @@
                               <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="149" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="jComboBoxRUInstitucion" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jTextFieldWebProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
-                              </Group>
                               <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Component id="jTextFieldNombreU" min="-2" pref="201" max="-2" attributes="0"/>
+                                      <Component id="jTextFieldApellidoU" min="-2" pref="201" max="-2" attributes="0"/>
+                                      <Component id="jTextFieldNicknameU" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
+                                      <Component id="jTextFieldEmailU" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
+                                      <Component id="jTextFieldContrasena" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jComboBoxNombreU" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jComboBoxApellidoU" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jComboBoxNicknameU" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jComboBoxEmailU" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                          <Component id="jComboBoxRUInstitucion" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jTextFieldWebProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
+                                      </Group>
                                       <Component id="jTextFieldBioProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
                                       <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                           <Component id="jDateChooserFNU" alignment="0" max="32767" attributes="0"/>
                                           <Component id="jTextFieldDescProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
                                       </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="1" attributes="0">
-                                              <Component id="jTextFieldNombreU" min="-2" pref="201" max="-2" attributes="0"/>
-                                              <Component id="jTextFieldApellidoU" min="-2" pref="201" max="-2" attributes="0"/>
-                                              <Component id="jTextFieldNicknameU" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
-                                              <Component id="jTextFieldEmailU" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
-                                              <Component id="jTextFieldContrasena" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
-                                              <Component id="jTextFieldCContrasena" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="jComboBoxNombreU" min="-2" max="-2" attributes="0"/>
-                                              <Component id="jComboBoxApellidoU" min="-2" max="-2" attributes="0"/>
-                                              <Component id="jComboBoxNicknameU" min="-2" max="-2" attributes="0"/>
-                                              <Component id="jComboBoxEmailU" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                      </Group>
+                                      <Component id="jTextFieldCContrasena" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="jFileChooserImgUsuario" min="-2" pref="329" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="jFileChooserImgUsuario" min="-2" pref="432" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -110,7 +110,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="171" max="-2" attributes="0"/>
+                  <EmptySpace pref="124" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -119,48 +119,49 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="TextoIngresedatosU" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jTextFieldNombreU" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="TextoNombreU" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
+                      <Component id="jComboBoxNombreU" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="TextoApellidoU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="jTextFieldApellidoU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="jComboBoxApellidoU" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jTextFieldNicknameU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="TextoNicknameU" alignment="3" pref="32" max="32767" attributes="0"/>
+                      <Component id="jComboBoxNicknameU" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jTextFieldEmailU" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="jComboBoxEmailU" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="TextoEmailU" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jTextFieldNombreU" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="TextoNombreU" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                              <Component id="jComboBoxNombreU" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="TextoApellidoU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                              <Component id="jTextFieldApellidoU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                              <Component id="jComboBoxApellidoU" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jTextFieldNicknameU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                              <Component id="TextoNicknameU" alignment="3" pref="32" max="32767" attributes="0"/>
-                              <Component id="jComboBoxNicknameU" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jTextFieldEmailU" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                              <Component id="jComboBoxEmailU" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="TextoEmailU" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jTextFieldContrasena" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
-                              <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jTextFieldContrasena" min="-2" pref="23" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jTextFieldCContrasena" min="-2" pref="25" max="-2" attributes="0"/>
+                              <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace pref="34" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="1" attributes="0">
                                   <Component id="TextoFNU" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="TextoDescProf" min="-2" pref="32" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" attributes="0">
-                                  <Component id="jTextFieldCContrasena" min="-2" pref="25" max="-2" attributes="0"/>
-                                  <EmptySpace pref="18" max="32767" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
                                   <Component id="jDateChooserFNU" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jTextFieldDescProf" min="-2" pref="31" max="-2" attributes="0"/>
@@ -171,23 +172,20 @@
                               <Component id="TextoBioProf" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                               <Component id="jTextFieldBioProf" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                           </Group>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+                                  <Component id="jTextFieldWebProf" min="-2" pref="31" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="TextoWebProf" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="TextoInstiPROF" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
+                              <Component id="jComboBoxRUInstitucion" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <Group type="102" attributes="0">
-                          <Component id="jFileChooserImgUsuario" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
-                          <Component id="jTextFieldWebProf" min="-2" pref="31" max="-2" attributes="0"/>
-                      </Group>
-                      <Component id="TextoWebProf" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="TextoInstiPROF" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
-                      <Component id="jComboBoxRUInstitucion" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jFileChooserImgUsuario" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
@@ -203,7 +201,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="38" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
